--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -29,9 +29,11 @@
     "preact-cli": "^2.0.0"
   },
   "dependencies": {
+    "lodash": "^4.17.5",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
+    "preact-material-components": "^1.4.0",
     "preact-router": "^2.5.5",
-    "preact-material-components": "^1.4.0"
+    "searchkit": "^2.3.0"
   }
 }
