--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,15 +1,30 @@
-version: '3.1'
+version: '3.6'
 
 services:
-
   elasticsearch:
-    image: elasticsearch
+    image: docker.elastic.co/elasticsearch/elasticsearch:6.2.3
+    container_name: akshara_elasticsearch
+    environment:
+      - cluster.name=akshara-cluster
+      - bootstrap.memory_lock=true
+      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - discovery.type=single-node
+    ulimits:
+      memlock:
+        soft: -1
+        hard: -1
     volumes:
-        - ./esdata:/usr/share/elasticsearch/data
+      - esdata:/usr/share/elasticsearch/data
     ports:
       - 9200:9200
-
+    networks:
+      - esnet
   kibana:
     image: kibana
     ports:
       - 5601:5601
+volumes:
+  esdata:
+    driver: local
+networks:
+  esnet:
