Specify elasticsearch version from env file

--- a/.env
+++ b/.env
@@ -2,3 +2,6 @@
 # without it set, compose prepends the directory name
 # see: https://forums.docker.com/t/docker-compose-prepends-directory-name-to-named-volumes/32835/8
 COMPOSE_PROJECT_NAME=akshara
+
+# for elasticsearch and kibana
+ES_VERSION=6.2.3
