Pull java heap size from env file

--- a/.env
+++ b/.env
@@ -5,3 +5,6 @@ COMPOSE_PROJECT_NAME=akshara
 
 # for elasticsearch and kibana
 ES_VERSION=6.2.3
+
+# based on how much memory a node has
+ES_JAVA_HEAP_SIZE=512m
