--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,7 @@ services:
       - cluster.name=akshara-cluster
       - bootstrap.memory_lock=true
       - discovery.type=single-node
-      # based on how much memory a node has
-      - "ES_JAVA_OPTS=-Xms512m -Xmx512m"
+      - "ES_JAVA_OPTS=-Xms${ES_JAVA_HEAP_SIZE} -Xmx${ES_JAVA_HEAP_SIZE}"
     ulimits:
       memlock:
         soft: -1
