--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,9 +35,13 @@ services:
     environment:
       # limit kibana memory usage to 512 mb (default is 1G)
       - "NODE_OPTIONS=--max-old-space-size=512"
-    volumes:
-      #share the config in the repo with the container
-      - ./elasticsearch/config/kibana.yml:/usr/share/kibana/config/kibana.yml
+      # kibana-specific xpack features
+      - xpack.monitoring.enabled=true
+      - xpack.reporting.enabled=true
+      # paid features
+      - xpack.graph.enabled=false
+      - xpack.ml.enabled=false
+      - xpack.security.enabled=false
     ports:
       - 5601:5601
     networks:
