Update team email

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -15,8 +15,8 @@ FROM docker.elastic.co/elasticsearch/elasticsearch:${es_version}
 # Add metadata.
 LABEL \
   name="Akshara Elasticsearch Image" \
-  # TODO add our email
-  maintainer="Akshara Team <anupdhml@gmail.com>" \
+  # TODO add a dedicated email
+  maintainer="Akshara Team <akshara-development-list@googlegroups.com>" \
   vendor="Akshara"
 
 # required for the akshara_latin_transliterate analyzer (for searches in latin transliteration)
