--- a/.env
+++ b/.env
@@ -3,9 +3,23 @@
 # see: https://forums.docker.com/t/docker-compose-prepends-directory-name-to-named-volumes/32835/8
 COMPOSE_PROJECT_NAME=akshara
 
-# for elasticsearch and kibana
+##############################################################################
+
+# for elasticsearch and kibana. Possible images types at:
+# https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_image_types
+#
+# if using the oss image, make sure that xpack settings are disabled in elasticsearch & kibana configs
+ES_IMAGE=elasticsearch-oss
+KIBANA_IMAGE=kibana-oss
+#ES_IMAGE=elasticsearch
+#KIBANA_IMAGE=kibana
+
+# latest version from https://www.docker.elastic.co/
 ES_VERSION=6.2.4
+KIBANA_VERSION=6.2.4
 
 # based on how much memory a node has
 ES_JAVA_HEAP_SIZE=256m
 KIBANA_NODE_MEM_LIMIT_MB=256
+
+##############################################################################
