Switch to elasticsearch images with xpack

--- a/.env
+++ b/.env
@@ -9,10 +9,10 @@ COMPOSE_PROJECT_NAME=akshara
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_image_types
 #
 # if using the oss image, make sure that xpack settings are disabled in elasticsearch & kibana configs
-ES_IMAGE=elasticsearch-oss
-KIBANA_IMAGE=kibana-oss
-#ES_IMAGE=elasticsearch
-#KIBANA_IMAGE=kibana
+#ES_IMAGE=elasticsearch-oss
+#KIBANA_IMAGE=kibana-oss
+ES_IMAGE=elasticsearch
+KIBANA_IMAGE=kibana
 
 # latest version from https://www.docker.elastic.co/
 ES_VERSION=6.2.4
