Expand memory limits for elasticsearch and kibana

--- a/.env
+++ b/.env
@@ -19,7 +19,7 @@ ES_VERSION=6.2.4
 KIBANA_VERSION=6.2.4
 
 # based on how much memory a node has
-ES_JAVA_HEAP_SIZE=256m
-KIBANA_NODE_MEM_LIMIT_MB=256
+ES_JAVA_HEAP_SIZE=1g
+KIBANA_NODE_MEM_LIMIT_MB=512
 
 ##############################################################################
