--- a/.env
+++ b/.env
@@ -8,7 +8,8 @@ COMPOSE_PROJECT_NAME=akshara
 # for elasticsearch and kibana. Possible images types at:
 # https://www.elastic.co/guide/en/elasticsearch/reference/current/docker.html#_image_types
 #
-# if using the oss image, make sure that xpack settings are disabled in elasticsearch & kibana configs
+# if using the oss image, make sure that xpack settings are disabled for
+# elasticsearch/kibana configs (since it doesn't have xpack)
 #ES_IMAGE=elasticsearch-oss
 #KIBANA_IMAGE=kibana-oss
 ES_IMAGE=elasticsearch
