Quiet kibana logging

--- a/.env
+++ b/.env
@@ -23,4 +23,7 @@ KIBANA_VERSION=6.2.4
 ES_JAVA_HEAP_SIZE=1g
 KIBANA_NODE_MEM_LIMIT_MB=512
 
+# if true, only error messages are shown
+KIBANA_LOGGING_QUIET=true
+
 ##############################################################################
