--- a/.env
+++ b/.env
@@ -16,6 +16,7 @@ ES_IMAGE=elasticsearch
 KIBANA_IMAGE=kibana
 
 # latest version from https://www.docker.elastic.co/
+# we just need to bump this version for upgrades (with config checks of course)
 ES_VERSION=6.2.4
 KIBANA_VERSION=6.2.4
 
