--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
     "build": "preact build",
-    "serve": "preact build && preact serve",
+    "serve": "preact serve",
     "dev": "preact watch",
     "lint": "eslint src"
   },
