--- a/nginx/akshara.conf
+++ b/nginx/akshara.conf
@@ -1,7 +1,6 @@
 upstream elasticsearch_upstream {
   hash   $remote_addr;
-  #server elasticsearch:9200; # docker sets this up for us
-  server thinkpad:9200;
+  server elasticsearch:9200; # docker sets this up for us
 }
 
 server {
