--- a/.env
+++ b/.env
@@ -3,8 +3,13 @@
 # see: https://forums.docker.com/t/docker-compose-prepends-directory-name-to-named-volumes/32835/8
 COMPOSE_PROJECT_NAME=akshara
 
+##############################################################################
+
 # https://hub.docker.com/_/nginx/
 NGINX_VERSION=1.13.12
+
+NGINX_SERVER_NAME=akshara
+NGINX_PORT=80
 
 ##############################################################################
 
