Clarify some doc lines

--- a/.env
+++ b/.env
@@ -8,6 +8,7 @@ COMPOSE_PROJECT_NAME=akshara
 # https://hub.docker.com/_/nginx/
 NGINX_VERSION=1.13.12
 
+# TODO match this with the domain we use
 NGINX_SERVER_NAME=akshara
 NGINX_PORT=80
 
