--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,11 +14,9 @@ services:
       - ./nginx/akshara.template:/etc/nginx/conf.d/akshara.template
       - ./nginx/run_nginx.sh:/usr/local/bin/run_nginx.sh
     ports:
-      - 80:80
+      - ${NGINX_PORT}:${NGINX_PORT}
     networks:
       - esnet
-    links:
-      - elasticsearch
   elasticsearch:
     build:
       context: ./elasticsearch
@@ -63,6 +61,8 @@ services:
     environment:
       # limit kibana memory usage (default is 1G)
       - "NODE_OPTIONS=--max-old-space-size=${KIBANA_NODE_MEM_LIMIT_MB}"
+      # for valid options here, see:
+      # https://github.com/elastic/kibana-docker/blob/master/build/kibana/bin/kibana-docker
       # if true, only error messages are shown
       - LOGGING_QUIET=${KIBANA_LOGGING_QUIET}
       # which page to launch by default
