Basic ssl setup for the nginx proxy

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,14 +7,15 @@ services:
       # the vars here are picked up from the .env file
       # and they will be injected into our nginx config template via `run_nginx.sh` script
       - NGINX_SERVER_NAME=${NGINX_SERVER_NAME}
-      - NGINX_PORT=${NGINX_PORT}
     command: run_nginx.sh
     volumes:
       # share the config in the repo with the container
       - ./nginx/akshara.template:/etc/nginx/conf.d/akshara.template
       - ./nginx/run_nginx.sh:/usr/local/bin/run_nginx.sh
+      - ./nginx/certificates:/etc/nginx/certificates
     ports:
-      - ${NGINX_PORT}:${NGINX_PORT}
+      - 80:80
+      - 443:443
     networks:
       - esnet
   elasticsearch:
