--- a/nginx/akshara.template
+++ b/nginx/akshara.template
@@ -13,10 +13,27 @@ upstream elasticsearch_upstream {
 }
 
 server {
-  listen ${NGINX_PORT} default_server;
-  listen [::]:${NGINX_PORT} default_server;
+  listen 80;
+  listen [::]:80;
+
+  # redirect all http traffic to the https address
+  return 301 https://$host$request_uri;
+}
+
+server {
+  listen 443 default_server;
+  listen [::]:443 default_server;
 
   server_name ${NGINX_SERVER_NAME};
+
+  ssl_certificate     /etc/nginx/certificates/${NGINX_SERVER_NAME}.crt;
+  ssl_certificate_key /etc/nginx/certificates/${NGINX_SERVER_NAME}.key;
+
+  ssl on;
+  ssl_session_cache  builtin:1000  shared:SSL:10m;
+  ssl_protocols  TLSv1 TLSv1.1 TLSv1.2;
+  ssl_ciphers HIGH:!aNULL:!eNULL:!EXPORT:!CAMELLIA:!DES:!MD5:!PSK:!RC4;
+  ssl_prefer_server_ciphers on;
 
   # for some diagnostics
   location /nginx_status {
@@ -33,25 +50,39 @@ server {
   }
 
   location / {
-    proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
-    proxy_set_header Host            ${DOLLAR}host;
-    proxy_set_header Upgrade         ${DOLLAR}http_upgrade;
-    proxy_set_header Connection      "upgrade";
-    proxy_http_version               1.1;
+    proxy_set_header Host              ${DOLLAR}host;
+    #proxy_set_header X-Real-IP         ${DOLLAR}remote_addr;
+    #proxy_set_header X-Forwarded-For   ${DOLLAR}proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-For   ${DOLLAR}remote_addr;
+    proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
+    proxy_set_header Upgrade           ${DOLLAR}http_upgrade;
+    proxy_set_header Connection        "upgrade";
+
+    proxy_http_version                 1.1;
 
     # / at the end here is important
-    proxy_pass                       http://frontend_upstream/;
+    proxy_pass                         http://frontend_upstream/;
+    #proxy_read_timeout                 90;
+
+    #proxy_redirect frontend:8080 https://${NGINX_SERVER_NAME};
   }
 
   location /es/ {
-    proxy_set_header X-Forwarded-For ${DOLLAR}remote_addr;
-    proxy_set_header Host            ${DOLLAR}host;
-    proxy_set_header Upgrade         ${DOLLAR}http_upgrade;
-    proxy_set_header Connection      "upgrade";
-    proxy_http_version               1.1;
+    proxy_set_header Host              ${DOLLAR}host;
+    #proxy_set_header X-Real-IP         ${DOLLAR}remote_addr;
+    #proxy_set_header X-Forwarded-For   ${DOLLAR}proxy_add_x_forwarded_for;
+    proxy_set_header X-Forwarded-For   ${DOLLAR}remote_addr;
+    proxy_set_header X-Forwarded-Proto ${DOLLAR}scheme;
+    proxy_set_header Upgrade           ${DOLLAR}http_upgrade;
+    proxy_set_header Connection        "upgrade";
+
+    proxy_http_version                 1.1;
 
     # / at the end here is important
-    proxy_pass                       http://elasticsearch_upstream/;
+    proxy_pass                         http://elasticsearch_upstream/;
+    #proxy_read_timeout                 90;
+
+    #proxy_redirect elasticsearch:9200 https://${NGINX_SERVER_NAME};
 
     # only GET requests are accepted from external hosts
     limit_except GET {
