Better handling of ssl certificate vars

--- a/.env
+++ b/.env
@@ -8,8 +8,13 @@ COMPOSE_PROJECT_NAME=akshara
 # https://hub.docker.com/_/nginx/
 NGINX_VERSION=1.13.12
 
-# TODO match this with the domain we use
-NGINX_SERVER_NAME=akshara
+# TODO for prod, match this with the domain we use
+SERVER_NAME=localhost
+
+# for testing, generate a self-signed cert in this dir via:
+# sudo openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout localhost.key -out localhost.crt
+# TODO dockerize this generation for dev use
+SSL_CERTIFICATE_DIR=./nginx/certificates
 
 ##############################################################################
 
