chore: separate out production endpoint based on NODE_ENV

--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
-    "build": "preact build",
+    "build": "NODE_ENV=production preact build",
     "serve": "yarn serve:gen-config && superstatic --port 8080 --host 0.0.0.0",
     "serve:gen-config": "preact serve --server config --dest superstatic.json",
     "dev": "preact watch",
