chore: enable CORS

--- a/elasticsearch/config/elasticsearch.yml
+++ b/elasticsearch/config/elasticsearch.yml
@@ -30,3 +30,11 @@ action.destructive_requires_name: true
 
 # disable the disk allocation decider
 cluster.routing.allocation.disk.threshold_enabled: false
+
+# Disable CORS
+http.cors.enabled: true
+http.cors.allow-origin: "/.*/"
+http.cors.allow-credentials: true
+http.cors.allow-methods : OPTIONS, HEAD, GET
+http.cors.allow-headers: "X-Requested-With, Content-Type, Content-Length, Authorization"
+
