chore: add storybook

--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -5,6 +5,7 @@
   "license": "MIT",
   "scripts": {
     "start": "if-env NODE_ENV=production && npm run -s serve || npm run -s dev",
+    "storybook": "start-storybook",
     "build": "NODE_ENV=production preact build",
     "serve": "yarn serve:gen-config && superstatic --port 8080 --host 0.0.0.0",
     "serve:gen-config": "preact serve --server config --dest superstatic.json",
@@ -25,6 +26,9 @@
     "build/*"
   ],
   "devDependencies": {
+    "@babel/core": "^7.4.0",
+    "@storybook/preact": "^5.0.4",
+    "babel-loader": "^8.0.5",
     "babel-polyfill": "^6.26.0",
     "babel-register": "^6.26.0",
     "eslint": "^4.5.0",
