--- a/parijat-frontend/package.json
+++ b/parijat-frontend/package.json
@@ -27,20 +27,19 @@
   ],
   "devDependencies": {
     "@babel/core": "^7.4.0",
+    "@babel/preset-env": "^7.4.2",
+    "@babel/register": "^7.4.0",
     "@storybook/preact": "^5.0.4",
-    "babel-loader": "^8.0.5",
-    "babel-polyfill": "^6.26.0",
-    "babel-register": "^6.26.0",
+    "core-js": "3",
     "eslint": "^4.5.0",
     "eslint-config-synacor": "^1.1.0",
     "expect": "^23.1.0",
     "if-env": "^1.0.0",
     "mocha": "^5.2.0",
-    "preact-cli": "^2.0.0",
+    "preact-cli": "^3.0.0-next.19",
     "superstatic": "^5.0.1"
   },
   "dependencies": {
-    "babel-preset-env": "^1.7.0",
     "lodash": "^4.17.5",
     "preact": "^8.2.1",
     "preact-compat": "^3.17.0",
